add new website from server na

--- a/xem-phim-bo/thien-su-toi-loi/index.html
+++ b/xem-phim-bo/thien-su-toi-loi/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1756,18 +1756,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truong-nham-nhi" title="Trường Nhảm Nhí">
+          <a class="list-top-movie-link" href="/phim-moi/bong-mat-doi-em" title="Bóng Mát Đời Em">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-nham-nhi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-mat-doi-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trường Nhảm Nhí
+             Bóng Mát Đời Em
             </span>
             <span class="list-top-movie-item-en">
-             BS High
+             The Parentage
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1778,21 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/monster-hunter-tho-san-quai-vat" title="Monster Hunter: Thợ săn quái vật">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-1-ke-danh-bom-cao-oc" title="Thám Tử Lừng Danh Conan 1: Kẻ Đánh Bom Cao Ốc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/monster-hunter-tho-san-quai-vat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-1-ke-danh-bom-cao-oc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Monster Hunter: Thợ săn quái vật
+             Thám Tử Lừng Danh Conan 1: Kẻ Đánh Bom Cao Ốc
             </span>
             <span class="list-top-movie-item-en">
-             Monster Hunter
+             Detective Conan: The Timed Bomb Skyscraper
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1800,21 +1800,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/little-forest-summer-autumn" title="Little Forest: Summer/Autumn">
+          <a class="list-top-movie-link" href="/phim-moi/oh-belinda" title="Oh Belinda">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/little-forest-summerautumn-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oh-belinda-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Little Forest: Summer/Autumn
+             Oh Belinda
             </span>
             <span class="list-top-movie-item-en">
-             Little Forest: Summer/Autumn
+             Oh Belinda
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1822,18 +1822,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/easy-bake-battle-cuoc-thi-nau-an-tai-gia" title="Easy-Bake Battle: Cuộc thi nấu ăn tại gia">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-viec-tot" title="Biệt đội việc tốt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/easy-bake-battle-cuoc-thi-nau-an-tai-gia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-viec-tot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Easy-Bake Battle: Cuộc thi nấu ăn tại gia
+             Biệt đội việc tốt
             </span>
             <span class="list-top-movie-item-en">
-             Easy-Bake Battle: The Home Cooking Competition
+             Team Zenko Go
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1844,21 +1844,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tan-vo" title="Tan Vỡ">
+          <a class="list-top-movie-link" href="/phim-moi/hoa-thanh-ca" title="Hoa Thanh Ca">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-vo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-thanh-ca-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tan Vỡ
+             Hoa Thanh Ca
             </span>
             <span class="list-top-movie-item-en">
-             Heartbreaker
+             Different Princess
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
